login dark mode, download folder dark mode, performance, fixes

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -231,3 +231,9 @@ hr {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+#no-syncs {
+    padding: 13px;
+    font-size: 10pt;
+    display: none;
+}
